--- a/.github/workflows/Bilibili_DailyCheckin.yml
+++ b/.github/workflows/Bilibili_DailyCheckin.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run-bilibili-task:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     
     steps:
       - uses: actions/checkout@v2
