--- a/.github/workflows/Bilibili_DailyCheckin.yml
+++ b/.github/workflows/Bilibili_DailyCheckin.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: self-hosted
     
     steps:
+      - name: Set Git Proxy
+        run: |
+          /usr/bin/git config --global http.proxy "http://127.0.0.1:1080"
+          /usr/bin/git config --global https.proxy "http://127.0.0.1:1081"
+      
       - uses: actions/checkout@v2
       
       - name: Set up Python
