--- a/.github/workflows/Bilibili_DailyCheckin.yml
+++ b/.github/workflows/Bilibili_DailyCheckin.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: Set Git Proxy
         run: |
-          /usr/bin/git config --global http.proxy "http://127.0.0.1:1080"
-          /usr/bin/git config --global https.proxy "http://127.0.0.1:1081"
+          /usr/bin/git config --global http.proxy "socks5://127.0.0.1:1080"
+          /usr/bin/git config --global https.proxy "socks5://127.0.0.1:1080"
       
       - uses: actions/checkout@v2
       
